--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/native": "^7.0.3",
+    "@react-navigation/native-stack": "^7.1.0",
+    "babel-plugin-module-resolver": "^5.0.2",
     "react": "18.3.1",
     "react-native": "0.76.2",
+    "react-native-safe-area-context": "^4.14.0",
+    "react-native-screens": "^4.2.0",
+    "react-native-sound": "https://github.com/SolankiYogesh/react-native-sound",
     "react-native-splash-screen": "https://github.com/SolankiYogesh/react-native-splash-screen"
   },
   "devDependencies": {
