--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "18.3.1",
-    "react-native": "0.76.2"
+    "react-native": "0.76.2",
+    "react-native-splash-screen": "https://github.com/SolankiYogesh/react-native-splash-screen"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
