chore: app name changes

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "voiceExample",
+  "name": "PackageTestingEnv",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -7,20 +7,20 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "clean": "echo '🧹 Cleaning node_modules and yarn.lock...'; rm -rf node_modules yarn.lock && echo '🧽 Cleaning Android build and Gradle files...'; rm -rf android/app/build android/app/.cxx android/build android/.gradle android/.idea && echo '🧼 Cleaning iOS build and Pods...'; rm -rf ios/Podfile.lock ios/build ios/Pods ios/.xcode.env.local && echo '✅ Clean-up complete!'"
   },
   "dependencies": {
     "@react-native-community/slider": "^4.5.5",
-    "@react-navigation/native": "^7.0.3",
-    "@react-navigation/native-stack": "^7.1.0",
-    "babel-plugin-module-resolver": "^5.0.2",
+    "@react-navigation/native": "^7.0.4",
+    "@react-navigation/native-stack": "^7.1.1",
     "react": "18.3.1",
-    "react-native": "0.76.2",
+    "react-native": "0.76.3",
     "react-native-awesome-slider": "^2.5.6",
     "react-native-gesture-handler": "^2.21.2",
-    "react-native-reanimated": "^3.16.1",
+    "react-native-reanimated": "^3.16.2",
     "react-native-safe-area-context": "^4.14.0",
-    "react-native-screens": "^4.2.0",
+    "react-native-screens": "^4.3.0",
     "react-native-sound": "https://github.com/SolankiYogesh/react-native-sound",
     "react-native-splash-screen": "https://github.com/SolankiYogesh/react-native-splash-screen",
     "react-native-turbo-image": "^1.21.0"
@@ -32,13 +32,14 @@
     "@react-native-community/cli": "15.0.1",
     "@react-native-community/cli-platform-android": "15.0.1",
     "@react-native-community/cli-platform-ios": "15.0.1",
-    "@react-native/babel-preset": "0.76.2",
-    "@react-native/eslint-config": "0.76.2",
-    "@react-native/metro-config": "0.76.2",
-    "@react-native/typescript-config": "0.76.2",
+    "@react-native/babel-preset": "0.76.3",
+    "@react-native/eslint-config": "0.76.3",
+    "@react-native/metro-config": "0.76.3",
+    "@react-native/typescript-config": "0.76.3",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
+    "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
