--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "voiceExample",
-  "displayName": "voiceExample"
+  "name": "PackageTestingEnv",
+  "displayName": "PackageTestingEnv"
 }
