--- a/ios/PackageTestingEnv.xcodeproj/xcshareddata/xcschemes/PackageTestingEnv.xcscheme
+++ b/ios/PackageTestingEnv.xcodeproj/xcshareddata/xcschemes/PackageTestingEnv.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "voiceExample.app"
-               BlueprintName = "voiceExample"
-               ReferencedContainer = "container:voiceExample.xcodeproj">
+               BuildableName = "PackageTestingEnv.app"
+               BlueprintName = "PackageTestingEnv"
+               ReferencedContainer = "container:PackageTestingEnv.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "voiceExampleTests.xctest"
-               BlueprintName = "voiceExampleTests"
-               ReferencedContainer = "container:voiceExample.xcodeproj">
+               BuildableName = "PackageTestingEnvTests.xctest"
+               BlueprintName = "PackageTestingEnvTests"
+               ReferencedContainer = "container:PackageTestingEnv.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "voiceExample.app"
-            BlueprintName = "voiceExample"
-            ReferencedContainer = "container:voiceExample.xcodeproj">
+            BuildableName = "PackageTestingEnv.app"
+            BlueprintName = "PackageTestingEnv"
+            ReferencedContainer = "container:PackageTestingEnv.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "voiceExample.app"
-            BlueprintName = "voiceExample"
-            ReferencedContainer = "container:voiceExample.xcodeproj">
+            BuildableName = "PackageTestingEnv.app"
+            BlueprintName = "PackageTestingEnv"
+            ReferencedContainer = "container:PackageTestingEnv.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
